--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "type": "module",
   "scripts": {
+    "setup": "npm install && cd ui/ && npm install",
     "dev": "tsx --watch src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "cd ui/ && npm run build && cd .. && npm run build && node dist/index.js"
   },
   "devDependencies": {
     "@types/node": "^24.0.10",
@@ -14,6 +15,7 @@
   "dependencies": {
     "@fastify/cors": "^11.0.1",
     "@fastify/formbody": "^8.0.2",
+    "@fastify/static": "^8.2.0",
     "@fastify/view": "^11.1.0",
     "edge.js": "^6.2.1",
     "fastify": "^5.4.0",
