--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fastify/view": "^11.1.0",
     "edge.js": "^6.2.1",
     "fastify": "^5.4.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "undici": "^6.21.3"
   }
 }
