--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fastify/formbody": "^8.0.2",
     "@fastify/static": "^8.2.0",
     "@fastify/view": "^11.1.0",
+    "@microlink/react-json-view": "^1.26.2",
     "edge.js": "^6.2.1",
     "fastify": "^5.4.0",
     "tailwindcss": "^4.1.11",
